--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -5,14 +5,17 @@
 // }
 body {
   font-family: monospace, Courier, serif;
-  // background-color: #3366cc;
+  background-color: #EFA747;
 }
 
 nav {
   display: flex;
+  //justify-content: space-evenly | space-around ; // https://css-tricks.com/snippets/css/a-guide-to-flexbox/
+
   align-items: center;
   border: 1px solid red;
-  background-color: grey;
+  // background-color: grey;
+  background-color: #515B51;
   width: 100%;
 
   ul {
@@ -59,6 +62,27 @@ nav {
 
   
 }
+
+header {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid darkred;
+
+  .imageContainer {
+    padding-top: 10px;
+
+    img {
+      border: 4px solid black;
+      border-radius: 150px;
+      width: 300px;
+      height: 300px;
+    }
+  }
+
+
+}
+
 
 // .navContainer {
 //   width: 200px;
