--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -3,20 +3,25 @@
 //   width: 100%;
 //   border: 1px solid red;
 // }
+
+
 body {
+  
   font-family: monospace, Courier, serif;
   background-color: #EFA747;
+  margin: 0;
+  // padding: 0; // might need later
 }
+
 
 nav {
   display: flex;
   //justify-content: space-evenly | space-around ; // https://css-tricks.com/snippets/css/a-guide-to-flexbox/
 
   align-items: center;
-  border: 1px solid red;
+  //border: 1px solid red;
   // background-color: grey;
   background-color: #515B51;
-  width: 100%;
 
   ul {
     display: flex;
@@ -67,7 +72,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid darkred;
+  //border: 1px solid darkred;
 
   .imageContainer {
     padding-top: 10px;
@@ -81,6 +86,63 @@ header {
   }
 
 
+}
+
+.aboutMe {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  border: 1px solid darkgreen;
+  background-color: #8C7547;
+  
+  .section1Title {
+    // align-items: center;
+    // flex-direction: column;
+    // align-items: center;
+
+    border: 1px solid #000000;
+
+    hr {
+      
+      height: 2px;
+      background-color: #000000;
+      border-color: #000000;
+    }
+  }
+
+  .section1Info {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+}
+
+.experience {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #DAC6AC;
+  border: 1px solid #43076A;
+  .section2Title {
+
+    border: 1px solid #000000;
+
+    hr {
+      
+      height: 2px;
+      background-color: #000000;
+      border-color: #000000;
+    }
+  }
+
+  .universityExperience {
+    margin-left: 10%;
+    margin-right: 10%;
+  }
+
+  .internshipExperience{
+    margin-left: 10%;
+    margin-right: 10%;
+  }
 }
 
 
