--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,10 +1,3 @@
-// header {
-//   position: fixed;
-//   width: 100%;
-//   border: 1px solid red;
-// }
-
-
 body {
   
   font-family: monospace, Courier, serif;
@@ -64,8 +57,6 @@ nav {
       padding: 10px;
     }
   }
-
-  
 }
 
 header {
@@ -84,11 +75,9 @@ header {
       height: 300px;
     }
   }
-
-
 }
 
-.aboutMe {
+#aboutMe {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -116,7 +105,7 @@ header {
   }
 }
 
-.experience {
+#experience {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -146,7 +135,7 @@ header {
   }
 }
 
-.projects {
+#projects {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -155,7 +144,7 @@ header {
 
   .projectsTitle {
 
-    border: 1px solid #000000;
+    border: 1px solid #948787;
 
     hr {
       
@@ -165,19 +154,20 @@ header {
     }
   }
 
-  .projectItem {
-    margin-left: 10%;
-    margin-right: 10%
+  // might use this this section later on
+  // .projectItem {
+  //   margin-left: 10%;
+  //   margin-right: 10%
 
 
-  }
+  // }
 
   h4 {
     font-style: italic;
   }
 }
 
-.contact {
+#contact {
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -200,6 +190,16 @@ header {
     display: flex;
     flex-direction: column;
     align-items: center;
+  } 
+}
+
+footer {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: #000000;
+
+  p {
+    color: white;
   }
-  
 }
