--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -283,7 +283,7 @@ header {
   flex-direction: column;
   align-items: center;
   background-color: $color1;
-  border: 1px solid #000000;
+  // border: 1px solid #000000;
 
   .contactTitle {
     // border: 1px solid #000000;
