--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -73,7 +73,8 @@ body {
     }
 
     a:hover {
-      color: white;
+      // color: white;
+      color: #C5C6C7;
     }
 
     dl {
@@ -166,7 +167,8 @@ body {
     }
 
     a:hover {
-      color: white;
+      // color: white;
+      color: #C5C6C7; 
     }
   }
   
@@ -196,7 +198,7 @@ header {
   display: flex;
   flex-direction: column;
   align-items: center;
-  border: 1px solid darkgreen;
+  // border: 1px solid darkgreen;
   background-color: $color3;
   
   .aboutTitle {
