--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -15,7 +15,7 @@ $color5: black;
 
 body {
   
-  font-family: Courier, serif;
+  font-family: monospace, Courier, serif;
   background-color: $color1;
   margin: 0;
   padding: 0;
